update figure caption
Thanks, @eoway !

Co-Authored-By: Elsa Ordway <22920153+eoway@users.noreply.github.com>

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -477,7 +477,7 @@ Models are needed to predict future ecosystem dynamics, which remain one of the 
 
 Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019a] and functions (e.g., thermal responses, as we present in this paper). At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @depurySimpleScalingPhotosynthesis1997; @bonanMovingIncorrectUseful2021]. In addition, capturing the vertical gradients in NPP, GPP, and respiration, and subsequently the net ecosystem effects, requires improved characterization of the functional response of leaf-level processes to vertically varying abiotic conditions, and the role of traits and abiotic conditions in mediating responses to thermal sensitivity. 
 
-![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical canopy structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table `r table_leaf_traits` or 2.](schematics/fig_remote_sensing.png)
+![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical canopy structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
 
 **Scaling in situ data with remote sensing**
 
