--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -394,6 +394,9 @@ Across landscapes, emitting species increase in relative abundance toward hotter
 In contrast, vertical structuring of leaf isoprene emissions within forests may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average.
 The observation that both the abundance of emitting species (Table ) and average emission rates were highest in the mid-canopy region of an Amazonian forest [@taylorNewFieldInstrument2021] -- as opposed to the the hotter and brighter upper canopy-- is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of isoprenes in forest thermal sensitivity across the vertical gradient.
+In the meantime, our best understannding is that isoprenes are important for mid-canopy thermal regulation, but that other traits are more important in the most sun-exposed canopy leaves.
+
+*add something on monoterpenes?*
 
 ## 5. Tree and ecosystem ecology
 
@@ -479,7 +482,7 @@ Though an improvement over big-leaf models, DGVMs that separate the canopy into 
 
 ![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical canopy structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
 
-**Scaling in situ data with remote sensing**
+### Scaling in situ data with remote sensing
 
 Remote sensing data provide a valuable means to scale between *in situ* observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne lidar and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. `r fig_model`). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
 
@@ -498,7 +501,7 @@ Detailed structural information from lidar data has been used to measure tree he
 - Critically, change to the vertical gradient--e.g., through increased mortality of canopy trees--will change processses across forest strata, with potentially dramatic consequences. (some of the literature on forest degredation or fragmentation could inform what happens when those gradients change)
 
 ## Acknowledgements
-Thanks to Norbert Kunert, Camille Piponiot, and Andrew Davies for providing figure materials. 
+Thanks to Norbert Kunert, Camille Piponiot, Peter B. Boucher and Andrew B. Davies for providing figure materials. 
 This manuscript benefited from feedback from Eleinis Ávila-Lovera, ... and the ForestGEO Ecosystems & Climate lab at SCBI.
 Funding was provided by the Smithsonian Institution, ....
 
