refs for trichome and gb

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -269,11 +269,11 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 ```
 
 Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to higher conductance ($g_b$ or maximal $g_s$) and/or reflectance, which help to lower $T_{leaf}$-$T_{air}$ (Table `r table_leaf_traits`). 
-Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006;@zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (reduces $g_b$).
+Thus, sun leaves are generally smaller, thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968a; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017; @mathurPhotosyntheticEfficiencySun2018a], but with greater leaf packing and clumping (reduces $g_b$).
 Steeper leaf angles reduce radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
 Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see also "Leaf gas exchange and its thermal sensitivity" section, @zwienieckiHydraulicLimitationsImposed2004]. 
-At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness (protects against water loss) and higher trichome density (reduces $g_b$; **REF?**).
-In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but their greater thermal capacitance due to larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. 
+At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness (protects against water loss) and higher trichome density [reduces $g_b$ or increases boundary layer turbulence; @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016].
+In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. 
 In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum air temperature ($T_{air_{max}}$) and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see "Leaf gas exchange and its thermal sensitivity" section, Table `r table_leaf_metabolism`).
